# micrograd-rs

./: Cargo.toml  LICENSE  Pytorch_ConvolutionalModel.pt  Pytorch_LinearModel.pt  README.md  out.txt
.github/workflows/: ci.yml
examples/: download_mnist_dataset.sh  feedforward_nn.rs  mnist_cnn.rs  mnist_cnn_model.pickle
src/: layer.rs  lib.rs  main.rs  mlp.rs  neuron.rs  operation.rs  prelude.rs  serialize.rs  tensor.rs  value.rs
src/activation/: activation.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
src/activations/: relu.rs
src/criterion/: criterion.rs  cross_entropy.rs  mod.rs  mse.rs
src/criterions/: cross_entropy.rs  mod.rs
src/layers/: batch_normalization.rs  convolution.rs  layer.rs  linear.rs  mod.rs  model.rs  pooling.rs  sequential.rs
src/lr_scheduler/: constant_lr.rs  cosine_annealing_lr.rs  exponential_lr.rs  lambda_lr.rs  linear_lr.rs  mod.rs  multiplicative_lr.rs  multistep_lr.rs  polynomial_lr.rs
src/lr_schedulers/: constant_lr.rs  mod.rs  polynomial_lr.rs  step_lr.rs
src/modules/: convolution.rs  linear.rs  mod.rs  module.rs  pooling.rs  sequential.rs
src/ops/: binary_ops.rs  mod.rs  unary_ops.rs
src/optimizer/: mod.rs  optimizer.rs  rmsprop.rs  sgd.rs
src/utils/: mod.rs  (+3 more)
tests/: batch_normalization.rs  constant_lr.rs  convolution.rs  cosine_annealing_lr.rs  cross_entropy.rs  exponential_lr.rs  filter.rs  kernel.rs  lambda_lr.rs  linear_lr.rs  model.rs  mse.rs  multiplicative_lr.rs  multistep_lr.rs  polynomial_lr.rs  pooling.rs  relu.rs  rmsprop.rs  sgd.rs  sigmoid.rs  softmax.rs  step_lr.rs  tanh.rs  tests.rs  value.rs
(+38 files in other folders)
