[package]
name = "micrograd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"rand" = "0.8"
"rand_distr" = "0.4"
"num-traits" = "0.2"
"ndarray" = { git = "https://github.com/LazaroHurtado/ndarray", branch = "windows_stride_feature" }
