[package]
name = "micrograd-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "micrograd_rs"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
num-traits = "0.2"
ndarray = { git = "https://github.com/LazaroHurtado/ndarray", branch = "windows_stride_feature" }
ordered-float = "1.0.1"
serde = "1.0"
serde-pickle = "1.1"
indexmap = { version = "1.9.2", features = ["serde"] }

[dev-dependencies]
approx = "0.4"
mnist = "0.5"